# tech_debt_hotspot

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml  tech_debt_hotspot.py
.github/: dependabot.yml
.github/workflows/: main.yml  pre-commit-autoupdate.yml  publish.yml  testing-formatting-linting.yml
src/: formatting.rs  hotspot.rs  main.rs  sorting.rs  stats.rs  types.rs
tech_debt_hotspot/: main.py
tests/: tech_debt_hotspot_test.py
