[package]
name = "tech_debt_hotspot"
version = "0.2.1"
edition = "2021"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.34", features = ["cargo"] }
csv = "1.3.1"
rust-code-analysis = "0.0.25"
rustpython-parser = "0.4.0"
tabled = "0.18.0"

[dev-dependencies]
rstest = "0.25.0"
tempfile = "3.19.1"
